# rust-chat

./: .gitignore  Cargo.toml  README.md
frontend/: package.json  svelte.config.js
frontend/src/lib/: Message.svelte
frontend/src/routes/: +page.svelte
src/: main.rs
